Give title more space to prevent wrapping.

--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -37,9 +37,3 @@
     /* font-weight: bold; */
     color: yellow;
 }
-
-@media (min-width: 751px) {
-    .side-drawer {
-        display: none;
-    }
-}
